--- a/public/style.css
+++ b/public/style.css
@@ -8,5 +8,5 @@ body, html {
     align-items: center;
     justify-content: center;
     height: 100%;
-    background-color: aquamarine;
+    background-color: yellow;
 }
